--- a/src/components/MoviesCardList/MoviesCardList.css
+++ b/src/components/MoviesCardList/MoviesCardList.css
@@ -16,9 +16,12 @@
     column-gap: 30px;
     row-gap: 30px;
   }
-
 }
 
-@media screen and (max-width: 670px) {
-
+@media screen and (max-width: 767px) {
+  .movies-list {
+    padding: 50px 0 77px;
+    grid-template-columns: repeat(1, max-content);
+    row-gap: 14px;
+  }
 }
