--- a/src/components/Promo/Promo.css
+++ b/src/components/Promo/Promo.css
@@ -4,13 +4,13 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding-bottom: 122px;
 }
 
 .promo__logo {
   width: 320px;
   height: 320px;
   position: relative;
-  padding-bottom: 122px;
 }
 
 .promo__title {
@@ -32,16 +32,31 @@
 
 @media screen and (max-width: 1025px) {
   .promo {
-    padding: 0 30px;
-    padding-bottom: 119px;
+    padding: 0 30px 240px;
   }
 
   .promo__title {
     max-width: auto;
     top: 401px;
+    max-width: 650px;
   }
 }
 
 @media screen and (max-width: 670px) {
+  .promo {
+    padding: 0 30px 181px;
+  }
 
+  .promo__logo {
+    width: 248px;
+    height: 248px;
+  }
+
+  .promo__title {
+    font-size: 31px;
+    line-height: 39px;
+    letter-spacing: -1.24px;
+    top: 281px;
+    max-width: 300px;
+  }
 }
