--- a/src/components/FormPageHeader/FormPageHeader.css
+++ b/src/components/FormPageHeader/FormPageHeader.css
@@ -15,11 +15,12 @@
   margin: 0;
 }
 
-@media screen and (max-width: 1025px) {
-
-
-}
-
 @media screen and (max-width: 670px) {
-
+  .form-page-header {
+    width: 320px;
+    box-sizing: border-box;
+    align-items: center;
+    padding: 56px 0 81px;
+    row-gap: 50px;
+  }
 }
