--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,5 +1,3 @@
-.header {}
-
 .header_dark {
   background-color: #073042;
 }
@@ -60,7 +58,6 @@
   display: none;
 }
 
-
 @media screen and (max-width: 1025px) {
   .header__wrapper {
     padding: 18px 30px 242px;
@@ -85,5 +82,31 @@
 }
 
 @media screen and (max-width: 670px) {
+  .header__wrapper {
+    padding: 18px 14px 160px;
+  }
 
+  .header__wrapper_movies {
+    padding: 15px 14px 89px;
+  }
+
+  .header__link {
+    font-size: 10px;
+    padding-right: 14px;
+  }
+
+  .header__link_green {
+    color: #000;
+    line-height: 27px;
+    padding-left: 12px;
+    width: 54px;
+    height: 26px;
+    box-sizing: border-box;
+  }
+
+  .header__account-button {
+    background: url("../../images/header__burger-icon-open_small.svg") no-repeat;
+    height: 43px;
+    width: 40px;
+  }
 }
