--- a/src/components/Movies/Movies.css
+++ b/src/components/Movies/Movies.css
@@ -3,8 +3,8 @@
   max-width: 1280px;
   min-width: 320px;
   margin: 0 auto;
-  box-sizing: border-box;
   padding: 0 70px 140px;
+  box-sizing: border-box;
   flex-grow: 1;
 }
 
@@ -24,9 +24,10 @@
   .movies {
     padding: 0 30px 140px;
   }
-
 }
 
 @media screen and (max-width: 670px) {
-
+  .movies {
+    padding: 8px 10px 140px;
+  }
 }
