--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -77,7 +77,6 @@
   display: block
 }
 
-
 @media screen and (max-width: 1025px) {
   .movie-item {
     width: 339px;
@@ -101,9 +100,40 @@
   .movie-item__likes-container {
     padding-top: 5px;
   }
-
 }
 
-@media screen and (max-width: 670px) {
+@media screen and (max-width: 767px) {
+  .movie-item {
+    width: 300px;
+    height: 237px;
+  }
 
+  .movie-item__image {
+    width: 300px;
+    height: 168px;
+  }
+
+  .movie-item__info {
+    padding: 0 10px 0 14px;
+  }
+
+  .movie-item__info-container {
+    row-gap: 15px;
+  }
+
+  .movie-item__name {
+    font-size: 12px;
+  }
+
+  .movie-item__duration {
+    font-size: 10px;
+  }
+
+  .movie-item__likes-container {
+    padding-top: 4px;
+  }
+
+  .movie-item__button-delete {
+    display: block;
+  }
 }
