--- a/src/components/Page/Page.css
+++ b/src/components/Page/Page.css
@@ -7,3 +7,10 @@
   flex-direction: column;
   justify-content: center;
 }
+
+/* на мобильном разрешении не нужно центрирование  */
+@media screen and (max-width: 670px) {
+  .page {
+    height: 100%;
+  }
+}
