--- a/src/components/SavedMovies/SavedMovies.css
+++ b/src/components/SavedMovies/SavedMovies.css
@@ -12,9 +12,10 @@
   .saved-movies {
     padding: 0 30px 0;
   }
-
 }
 
 @media screen and (max-width: 670px) {
-
+  .saved-movies {
+    padding: 7px 10px 0;
+  }
 }
