--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -22,13 +22,14 @@
   justify-content: space-between;
   align-items: flex-start;
   margin: 0;
-  padding: 15px 16px 16px;
+  padding: 0 16px 16px;
 }
 
 .movie-item__info-container {
   display: flex;
   flex-direction: column;
   row-gap: 17px;
+  padding-top: 10px;
 }
 
 .movie-item__name {
@@ -89,7 +90,7 @@
   }
 
   .movie-item__info {
-    padding: 0 14px;
+    padding: 0 14px 0;
   }
 
   .movie-item__info-container {
