--- a/src/components/FormPageForm/FormPageForm.css
+++ b/src/components/FormPageForm/FormPageForm.css
@@ -8,11 +8,15 @@
   color: #FF3055;
   font-size: 10px;
   font-weight: 400;
-  padding-top: 50px;
 }
 
-/* сделать padding-top для form__error на странице login
-и margin-top подправить для form__button-submit_login */
+.form__error_register {
+  padding-top: 52px;
+}
+
+.form__error_login {
+  padding-top: 145px;
+}
 
 .form__button-submit {
   font-size: 14px;
@@ -26,7 +30,7 @@
 }
 
 .form__button-submit_login {
-  margin: 156px 0 3px;
+  margin: 11px 0 3px;
 }
 
 .form__button-submit_register {
@@ -55,12 +59,20 @@
     font-size: 12px;
   }
 
+  .form__error_register {
+    padding-top: 140px;
+  }
+
+  .form__error_login {
+    padding-top: 235px;
+  }
+
   .form__button-submit_register {
-    margin: 158px 0 3px;
+    margin: 10px 0 3px;
   }
 
   .form__button-submit_login {
-    margin: 245px 0 3px;
+    margin: 10px 0 3px;
   }
 
   .form__title {
