--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@
 @import url(./components/Page/Page.css);
 
 @import url(./components/Opacity/Opacity.css);
+@import url(./components/MessagePopup/MessagePopup.css);
 
 @import url(./components/Header/Header.css);
 @import url(./components/Navigation/Navigation.css);
