--- a/src/components/MessagePopup/MessagePopup.css
+++ b/src/components/MessagePopup/MessagePopup.css
@@ -1,4 +1,4 @@
-.popup {
+.message-popup {
   font-family: 'Inter', Arial, sans-serif;
   visibility: hidden;
   opacity: 0;
@@ -15,34 +15,35 @@
   background-color: rgba(0, 0, 0, 0.5);
 }
 
-.popup_opened {
+.message-popup_opened {
   visibility: visible;
   opacity: 1;
   transition: .3s;
   z-index: 999;
 }
 
-.popup__container {
+.message-popup__container {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   align-items: flex-end;
-  width: 400px;
-  height: 400px;
+  width: 300px;
+  height: 300px;
   background-color: #fff;
   border-radius: 30px;
 }
 
-.popup__message {
+.message-popup__message {
   color: #000;
-  font-size: 20px;
+  font-size: 18px;
   font-weight: 400;
   text-align: center;
   margin: 0 auto;
-  padding-top: 90px;
+  padding-top: 45px;
+  width: 280px;
 }
 
-.popup__button_type_close {
+.message-popup__button-close {
   background: url(../../images/popup__button-close.svg);
   background-repeat: no-repeat;
   border: none;
@@ -52,6 +53,4 @@
   margin: 20px 20px 40px 0;
   box-sizing: border-box;
 }
-
-
 
