добавляет получение фильмов от apiMovie; Блок результатов появляется только после обработки запроса. Если пользователь ещё ничего не искал, блока с карточками на странице нет.
Как только поиск произведён, текст запроса, найденные фильмы и состояние переключателя короткометражек сохраняются в хранилище, а блок появляется.

До получения данных блок содержит прелоадер. Если ничего не найдено, на месте прелоадера появляется надпись «Ничего не найдено».

Если в процессе получения и обработки данных происходит ошибка, в окне результатов выводится надпись: «Во время запроса произошла ошибка. Возможно, проблема с соединением или сервер недоступен. Подождите немного и попробуйте ещё раз».

Когда данные получены, в блоке результатов исчезает прелоадер и появляются карточки фильмов. Их следует расположить в линию по 3 на каждой строке на разрешении 1280 пикселей. Если сжимать окно браузера, карточки переносятся на следующую строку.

--- a/src/components/Movies/Movies.css
+++ b/src/components/Movies/Movies.css
@@ -2,10 +2,24 @@
   font-family: 'Inter', Arial, sans-serif;
   max-width: 1280px;
   min-width: 320px;
+  width: 100%;
   margin: 0 auto;
   padding: 0 70px 140px;
   box-sizing: border-box;
   flex-grow: 1;
+  position: relative;
+}
+
+.movies__error-container {
+  padding-top: 40px;
+  display: flex;
+  justify-content: center;
+}
+
+.movies__error {
+  font-size: 14px;
+  font-weight: 400;
+  text-align: center;
 }
 
 .movies__button {
@@ -18,6 +32,10 @@
   background: #F9F9F9;
   padding: 0;
   margin: 0;
+}
+
+.movies__button_invisible {
+  display: none;
 }
 
 @media screen and (max-width: 1025px) {
