--- a/src/components/MoviesCardList/MoviesCardList.css
+++ b/src/components/MoviesCardList/MoviesCardList.css
@@ -1,4 +1,5 @@
 .movies-list {
+  visibility: hidden;
   padding: 80px 0 61px 0;
   margin: 0 auto;
   max-width: max-content;
@@ -7,6 +8,10 @@
   column-gap: 24px;
   row-gap: 37px;
   box-sizing: border-box;
+}
+
+.movies-list_visiable {
+  visibility: visible;
 }
 
 @media screen and (max-width: 1279px) {
