--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -3,6 +3,7 @@
   display: flex;
   flex-direction: column;
   margin: 0 auto;
+  position: relative;
 }
 
 .search__form {
@@ -44,6 +45,16 @@
   border-bottom: 1px solid #E8E8E8;
   width: 100%;
   margin: 0;
+}
+
+.search__error{
+  font-size: 13px;
+  font-weight: 400;
+  color: #FF3055;
+  margin: 0;
+  padding: 0;
+  position: absolute;
+  top: 60px;
 }
 
 @media screen and (max-width: 1025px) {
