Если карточек больше трёх, под ними появляется кнопка «Ещё». По нажатию отрисовываются ещё три, а кнопка сдвигается ниже, чтобы оказаться под блоком с карточками.
Обратите внимание, что количество карточек, которые отображаются на странице, зависит от ширины экрана устройства:

- Ширина 1280px — 12 карточек по 3 в ряд. Кнопка «Ещё» загружает по 3 карточки.
- Ширина 768px — 8 карточек по 2 в ряд. Кнопка «Ещё» загружает по 2 карточки.
- Ширина от 320px до 480px — 5 карточек по 1 в ряд. Кнопка «Ещё» загружает по 2 карточки.

Количество карточек в ряду может изменяться в зависимости от сгенерированного варианта макета. Если количество карточек в ряду не соответствует описанию задания, то в зависимости от разрешения подгружается по одному ряду карточек. Если же в получившимся макете на десктопном разрешении только одна колонка из 7 карточек, то клик на кнопку «Ещё» загружает 7 дополнительных карточек. На мобильной версии всегда загружается 5 карточек по 1 в ряд. Такие данные карточки мы получаем в ответе BeatfilmMoviesApi:

- название фильма на русском языке находится в свойстве nameRU;
- изображение — в image.url; Изображения приходят с сервера с относительным, а не абсолютным URL. Не забудьте добавить к ним URL сервера — https://api.nomoreparties.co/.
- ссылка на трейлер — в trailerLink;
- длительность короткометражного фильма рассчитывается на основе поля duration.

--- a/src/components/Movies/Movies.css
+++ b/src/components/Movies/Movies.css
@@ -22,7 +22,7 @@
   text-align: center;
 }
 
-.movies__button {
+.movies__button_visible {
   font-size: 12px;
   font-weight: 500;
   width: 100%;
@@ -32,9 +32,10 @@
   background: #F9F9F9;
   padding: 0;
   margin: 0;
+  display: block;
 }
 
-.movies__button_invisible {
+.movies__button {
   display: none;
 }
 
