--- a/src/components/MoviesCardList/MoviesCardList.css
+++ b/src/components/MoviesCardList/MoviesCardList.css
@@ -1,9 +1,9 @@
 .movies-list {
-  visibility: hidden;
+  display: none;
   padding: 80px 0 61px 0;
   margin: 0 auto;
   max-width: max-content;
-  display: grid;
+  /* display: grid; */
   grid-template-columns: repeat(3, max-content);
   column-gap: 24px;
   row-gap: 37px;
@@ -11,7 +11,7 @@
 }
 
 .movies-list_visiable {
-  visibility: visible;
+  display: grid;
 }
 
 @media screen and (max-width: 1279px) {
