--- a/src/components/Preloader/Preloader.css
+++ b/src/components/Preloader/Preloader.css
@@ -47,6 +47,7 @@
   height: 100%;
   z-index: 10;
   padding: 20px;
+  box-sizing: border-box;
 }
 
 .preloader__container {
@@ -85,4 +86,28 @@
   z-index: 10;
   background: #2BE080;
   animation: preloader-inside-red 1s ease-in-out infinite;
+}
+
+@media screen and (max-width: 767px) {
+  .preloader {
+    padding: 10px;
+  }
+  .preloader__container {
+    width: 50px;
+    height: 50px;
+    position: relative;
+  }
+
+  .preloader__round {
+    width: 50px;
+    height: 50px;
+  }
+
+  .preloader__round::after,
+  .preloader__round::before {
+    width: 50px;
+    height: 50px;
+  }
+
+
 }
