--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -27,7 +27,7 @@
   padding-right: 0;
 }
 
-.navigation__link_active .navigation__link_active {
+.navigation__link-dark_active  {
   font-weight: 500;
 }
 
